compiler/weave_syntax/tests/data/syntax/IncompleteNamespace6.error
error: Unexpected tokens
        --> <source>:1:1
         |
       1 | namespace Y }
         | ^^^^^^^^^^^^^
       2 | namespace X { }
         | ^^^^^^^^^^^^^^^
error: Expected ';'
        --> <source>:3:1
         |
       3 | 
         | ^
